--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
-    background-color: #ecf0f1;
+    background-color: #2c3e50;
 }
 .btn{
     cursor: pointer;
 }
 body{
-    color: #34495e;
+    color: white;
 }
 .clicked{
     color: #7f8c8d;
@@ -17,4 +17,54 @@ body{
 
 .showing{
     display: block;
+}
+
+.js-clock{
+    margin-top: 15%;
+    text-align: center;
+    font-size: 4rem;
+    color: black;
+
+}
+
+.js-greetings{
+    text-align: center;
+    font-size: 2rem;
+}
+
+.js-toDoForm input{
+    margin-left: 37%;
+    width: 500px;
+    height: 40px;
+    font-size: 2rem;
+    border: solid gray 1px;
+    background: transparent;
+}
+
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }to{
+        opacity: 1;
+    }
+}
+
+.bgImage{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn .5s linear;
+}
+
+.js-weather{
+    margin-left: 90%;
+}
+
+ul li{
+    margin-left: 800px;
+    margin-top: 10px;
+    font-size: 2rem;
 }
